119 pages sent to JSS for proof reading purpose, and 5 pages are complete in 013.tex

--- a/013.tex
+++ b/013.tex
@@ -1,26 +1,13 @@
 \begin{entry}
-\word{shaMkara}
-\src{kA}
-\gl{}
-\info{gu.Ba.bA}{10neV su, 2 pa}{103}{}
-\mng{.....sura kulatilaka shaMkarana Bakitxyalilx}
-\gl{}
-\info{gu.boVdhA}{parx.sathxla.pa-140}{19}{}
-\mng{shaMkaranigomemx tiLiyadu....}
-\end{entry}
-
-\begin{entry}
 \word{shaMKini}
-\src{kA}
-\gl{nA}
-\mng{shariVradalilxruva hatutx parxmuKa nADigaLalilx oMdu; nABiyalilxdudx kuSxdheyanunx upashamagoLisuva nALa:}
-\expl{iDApiMgalA ...shaMKiniyeMba dashanADigaLaM BeVdisutatxM (cenanxba. samava. 3-330-1000).}
+\meaning{\arthanonum{shariVradalilxruva hatutx parxmuKa nADigaLalilx oMdu; nABiyalilxdudx kuSxdheyanunx upashamagoLisuva nALa.}
+\ullekha{Atamxsithxti shivayoVga... alaMbu lakuhA payasivxni shaMKiniyeMba dashanADigaLaM BeVdisutatxM... (savasaM. 3; cenanxba. 977-316); matarxyXda biVjava bititx... shaMKini padimxnigeNeyAda... (savasaM. 11; GanaliM. 702-312); baLikakxM... tha yoVgini da shaMKini... (savasaM. 11; imamxDi. 1407-651).}}
 \end{entry}
 
 \begin{entry}
 \word{shaMBu}
-\src{saM}
-\mng{shiva, parameVshavxra. pArxNaliMgisathxlada sAdhakanu aMtaraMgadalilx mUlAdhAradiMda BUrxmadhayxdavarege (AjAcnxcakarxdavarege) iruva Aru cakarxgaLalilx iruva Aru kamalagaLanunx BAvisabeVku. BUrxmadhayxma UdhavxRBAgadalilx (barxhamxraMdharxdalilx) sahasatxdalakamalavanunx BAvisabeVku. A kamaladalilx nimaRlavAda caMdarxbiMbavanunx BAvisi adaroLage sUkaSxmXraMdharxviruvudanunx tiLidukoLaLxbeVku. aduveV keYlAsasAthxna. alilx shaMBuvanunx dhAyxnisabeVku.}
+\meaning{\arthanonum{shiva, parameVshavxra. pArxNaliMgisathxlada sAdhakanu aMtaraMgadalilx mUlAdhAradiMda BUrxmadhayxdavarege (AjAcnxcakarxdavarege) iruva Aru cakarxgaLalilx iruva Aru kamalagaLanunx BAvisabeVku. BUrxmadhayxma UdhavxRBAgadalilx (barxhamxraMdharxdalilx) sahasatxdalakamalavanunx BAvisabeVku. A kamaladalilx nimaRlavAda caMdarxbiMbavanunx BAvisi adaroLage sUkaSxmXraMdharxviruvudanunx tiLidukoLaLxbeVku. aduveV keYlAsasAthxna. alilx shaMBuvanunx dhAyxnisabeVku.}}
+\smallskip
 \begin{shl}
 aMtaH SaTfcakarxrUDhAni paMkajAni viBAvayeVtf |\\
 barxhAmxdisAthxnaBUtAni BUrxmadhAyxMtAni mUlataH ||\\
@@ -29,52 +16,50 @@ BAvayeVtatxtarx vimalaM caMdarxbiMbaM tadaMtareV ||\\
 sUkaSxmXraMdharxM vijAniVyAtf tatekxYlAsapadaM viduH |\\
 tatarxsathxM BAvayeVcaCxMbuM savaRkAraNakAraNamf ||
 \end{shl}
+\smallskip
 \pauthor{(si. shi., 12. 25-27)}
-
-\src{kA}
-\gl{}
-\info{gu.boV.pa. 152}{divxVsathxla.pa-152}{50}{1974.}
-\mng{shaMBuviMdadhikavenabeVku....}
+\smallskip
+\newmeaning{\ullekha{amaqtamati soVmashaMBuviMge huTiTxdAtaniMdarx... (savasaM. 1; basava. 545-135); kaMbuvina BeVdada... shaMBu niVnAde, kapilasidadhxmalelxVshavxrA. (savasaM. 4; sidadhxrA. 400-114); acaRne pUjane... shaMBujakekxVshavxranalilx ivu kANiraNANx nitayxneVma. (savasaM. 5; satayxkakx. 1207-364); makaRTana lAgu... shaMBuviniMditatx savxyaMBuviniMdatatx atibaLa noVDA... (savasaM. 7; dAsoVsaM. 1133-358); guru karuNAkara... shaMBu caranatiVthaRparxsAdava... (savasaM. 14; heVmaga. 1196-546).}}
 \end{entry}
 
 \begin{entry}
 \word{shaMBusavxyaMBu}
-\src{kA}
-\gl{nA}
-\info{measAM}{saM. 1-18}{4}{1985}
-\begin{shl}
-shAMBaviyADidetatxrake hecicx haruSAbidhx\\
-aMburuhavanu alAlxDi\\ 
-shaMBu savxyaMBu sanamxtava kANabahudeMdu\\
-aMbikeyADidutatxragaLa ||\,18\,||
-\end{shl}
+\meaning{\ullekha{vasutxveMdare parabarxhamxda... shaMBusavxyaMBugiMdatatxtatx tAne noVDA... (savasaM. 10; kADasi. 17-09).}}
 \end{entry}
 
 \begin{entry}
 \word{shaqMgATaka}
 \src{saM}
-\mng{tirxkUTasAthxnaveMba BUrxmadhayxsAthxnadalilx eraDu shabadx (shoVtarx=kivi) dAvxragaLu matutx eraDu gaMdha (nAsika=mUgu) dAvxragaLu seVri catuSipxVThavuMTAgutatxde. ideV shaqMgATaka eMdeniside.}
+\meaning{\arthanonum{tirxkUTasAthxnaveMba BUrxmadhayxsAthxnadalilx eraDu shabadx (shoVtarx=kivi) dAvxragaLu matutx eraDu gaMdha (nAsika=mUgu) dAvxragaLu seVri catuSipxVThavuMTAgutatxde. ideV shaqMgATaka eMdeniside.}}
+\smallskip
 \begin{shl}
 shabadxdAvxreV gateV yatarx gaMdhadAvxreV tatheYva ca |\\
 samAyoVgeV catuSipxVThaM shaqMgATakasusaMjicnxtamf ||
 \end{shl}
+\smallskip
 \pauthor{(shi. yoV. parx., 2. 36)}
-\SEE{tirxkUTa}
+\smallskip
+\newmeaning{\arthanonum{\SEE{tirxkUTa}}}
 \end{entry}
 
 \begin{entry}
 \word{shakatxyXMga}
 \src{saM}
-\mng{parameVshavxrana aidu vidha maMtarxrUpada aMgagaLalilx oMdu. I aMgada haqdaya AkAshada vaNaR, shirasutx piVta (haLadi) vaNaR, shiKe shAyxmala vaNaR, kavaca rakatxvaNaR, neVtarx kaqSaNxvaNaR, asatxrX marakatada vaNaR. sAM-siVM-sUM-seYM-swM-saH ivu tAMtirxkashakitx biVjagaLu. iveV reVPa sahitavAdare (sArxM-sirxVM-sUrxM-serxYM-swrxH-sarxH) veYdika shakitxbiVjagaLAgutatxve.}
+\meaning{\arthanonum{parameVshavxrana aidu vidha maMtarxrUpada aMgagaLalilx oMdu. I aMgada haqdaya AkAshada vaNaR, shirasutx piVta (haLadi) vaNaR, shiKe shAyxmala vaNaR, kavaca rakatxvaNaR, neVtarx kaqSaNxvaNaR, asatxrX marakatada vaNaR. sAM-siVM-sUM-seYM-swM-saH ivu tAMtirxkashakitx biVjagaLu. iveV reVPa sahitavAdare (sArxM-sirxVM-sUrxM-serxYM-swrxH-sarxH) veYdika shakitxbiVjagaLAgutatxve.}}
+\smallskip
 \begin{shl}
 shakatxyXMgaM paMcamaM vidAyxtf... |
 \end{shl}
+\smallskip
 \pauthor{(vA. shu. A., 8. 7)}
+\smallskip
 \begin{shl}
 piVtaM shAyxmaM tathA rakatxM kaqSaNxM marakataM tathA |\\
 EteYreVva savaNARni shakatxyXMgAnAM karxmeVNa tu ||
 \end{shl}
+\smallskip
 \pauthor{(vA. shu. A., 8. 82)}
+\smallskip
 \begin{shl}
 AdhArashakitxbiVjaM ca biMdunAdasamanivxtamf |\\
 parxthamaM shakitxbiVjaM sAyxtf sAmitiVbiVjamitayxpi ||\\
@@ -90,41 +75,22 @@ paMcamaM biVjamituyxkatxM SaSaThxM biVjamathoVcayxteV |\\
 savxrAMtaM shakitxsaMyukatxM vaNaRM ceYva tu saMyutamf ||\\
 EvaM shakatxyXMgamAKAyxtaM... |
 \end{shl}
+\smallskip
 \pauthor{(vA. shu. A., 8. 65-71)}
+\smallskip
+\newmeaning{\ullekha{matatxM, parxNavaBeVda... shivAMga BUtAMga vidAyxMga kUpAMga shakarxyXMga... (savasaM. 11; imamxDi. 1357-634).}}
 \end{entry}
 
 \begin{entry}
 \word{shakatx}
-\src{kA}
-\gl{nA}
-\mng{paMcakaqtayxgaLige kAraNanAda parashivana uduyxkatx, parxvaqtatx matutx shakatx eMba mUru rUpagaLalilx oMdu:}
-\expl{malatarxyaMgaLuma{\ri}yadipARtaniVgaM shivaM shakatxneMdenutavA pirxVtiyuduyxkatxneMduM parxvaqtatxnumeMdu mU{\ru}bageyapapxM (viVsheYpu. 6-95-5).}
-\end{entry}
-
-\begin{entry}
-\word{shakitxH}
-\src{saM}
-\gl{}
-\info{}{}{}{}
-\begin{shl}
-shakitxH tatatxvXmituyxkatxH, parAshakitxH, parApeVkaSxM, dhamaRsavxrUpaH\\
-shivasayx aBinanx savxrUpaH | shakitxH Ishavxrasayx citatxnuH ituyxcayxteV |
-\end{shl}
-\begin{shl}
-1. parAnapeVkaSxM shivasaMjacnxmasayx rUpaM parApeVkaSxmapi shurxti jAcnxH |\\
-shakAtxyXKayxmAhusatxdaBinanxrUpaH sadhamaR IshaH sa ca dhamaRrUpaH ||
-\end{shl}
-\pauthor{sidAdhxMta sArAvaliH jAcnx.pA.sholxV. 3}
-\begin{shl}
-2. shakitxshicxtatxnuriVshavxrasayx karaNaM jecnxVyeVSu kAyeRSutadf |
-\end{shl}
-\pauthor{sidAdhxMta sArAvaliH jAcnx.pA.sholxV. 4}
+\meaning{\arthanonum{paMcakaqtayxgaLige kAraNanAda parashivana uduyxkatx, parxvaqtatx matutx shakatx eMba mUru rUpagaLalilx oMdu.}
+\ullekha{malatarxyaMgaLuma{\ri}yadipARtaniVgaM shivaM shakatxneMdenutavA pirxVtiyuduyxkatxneMduM parxvaqtatxnumeMdu mU{\ru}bageyapapxM (viVsheYpu. 5-6-95).}}
 \end{entry}
 
 \begin{entry}
 \word{shakitx}
-\src{saM}
-\mngnum{parashivanalilx avinABAva saMbaMdha diMdiruva mahAshakitx. I shakitxge vimashARshakitx eMdu hesaru. mUvatatxnAlukx tatatxvXgaLa tAyi. saqSiTx, sithxti, laya, tiroVdhAna, anugarxha eMba shivana paMcakaqtayxgaLalilx sahakarisuvavaLu. mAye, parxkaqti, parAshakitx, shive modalAda hesarugaLiMda kUDidavaLu. elalx loVkagaLa saqSiTxya kAyaRdalilx samavAya (upAdAna) kAraNaLu; satf-citf-AnaMda savxrUpaLu.}
+\meaning{\artha{parashivanalilx avinABAva saMbaMdha diMdiruva mahAshakitx. I shakitxge vimashARshakitx eMdu hesaru. mUvatatxnAlukx tatatxvXgaLa tAyi. saqSiTx, sithxti, laya, tiroVdhAna, anugarxha eMba shivana paMcakaqtayxgaLalilx sahakarisuvavaLu. mAye, parxkaqti, parAshakitx, shive modalAda hesarugaLiMda kUDidavaLu. elalx loVkagaLa saqSiTxya kAyaRdalilx samavAya (upAdAna) kAraNaLu; satf-citf-AnaMda savxrUpaLu.}}
+\smallskip
 \begin{shl}
 yAmAhuH savaRloVkAnAM parxkaqtiM shAsatxrXpAragAH |\\
 tAM dhamaRcAriNiVM shaMBoVH parxNamAmi parAM shivAmf ||\\
@@ -135,101 +101,59 @@ samasatxloVkanimARNa samavAyasavxrUpiNiV ||\\
 vaMdeV mAheVshavxriVM shakitxM mahAmAyAdhirUpiNiVmf ||\\
 guNatarxyAtimxkA shakitxH barxhamxniSAThx sanAtaniV |
 \end{shl}
+\smallskip
 \pauthor{(si. shi., 1. 8, 11; 2-12; 5. 39)}
+\smallskip
 \begin{shl}
 shivashakitxsamAyoVgoV jagatfsaqSaTxyXthaRkAraNamf |
 \end{shl}
+\smallskip
 \pauthor{(shi. ta. ra., 1. 4. 49)}
-\mngnum{nAda, biMdu, kalegaLalilx biMduveV shakitx.}
+\smallskip
+\newmeaning{\artha{nAda, biMdu, kalegaLalilx biMduveV shakitx.}}
+\smallskip
 \begin{shl}
 biMduH shakitxH shivoV nAdaH kalA saMyoVga Eva ca ||
 \end{shl}
+\smallskip
 \pauthor{(viV. parx., sholxV. 1, pu. 60)}
-\gl{}
-\info{}{}{}{2006}
-\begin{shl}
-parxSuTxM shakitxmaBiVpusxnAtha vidhinA suvxpArxthaRnAyAH kirxyA : 02 : 02\\
-darxSuTxM nAhoRVlapxshakitxtavxyimi vidhinA suvxpArxthaRnAyAH kirxyA : 11 : 05\\
-darxSuTxM nAhoRVlapx saqjanAshakitx kadAcidivxdhi : 13 : 06\\
-darxSuTxM nAhoRVlapx shakitxnicayAnutApxdayAmAsasa : 14 : 06\\
-shivaH shakAtxyXyukotxV yadi ... : - : 47\\
-``shiva shakAtxyXtamxkaM vishavxM'' : - : 47\\
-parxmatatx shakitxsaMyukatxM ... : - : 67 
-\end{shl}
-\gl{}
-\info{shivA.pa}{parxka.-1, ga.BA.-6}{5}{}
-\mng{(parxkaTitakoVshadalilx seVpaRDe mADuvudu)}\\
-\mng{shakitxyu matetx mUru vidhavAgirutatxde.}\\
-\mngnum{shudAdhx-shakitx, sadAshiva, Ishavxra, shudadhxvidAyx-nAlukxvidha.}\\
-\mngnum{shudAdhxshudAdhx-mAyA, kalA, vidAyx, rAga, kAla, niyati - Aruvidha : jiVvAtamxna savxrUpavanunx kaMcukadaMte AvarisiruvudariMda `SaTf kaMcuka' eMdeniside.}\\
-\mngnum{ashudAdhx - (asapxSaTx) ?}
+\smallskip
+\newmeaning{\artha{shudAdhx-shakitx, sadAshiva, Ishavxra, shudadhxvidAyx-nAlukxvidha.}}
+\newmeaning{\artha{shudAdhxshudAdhx-mAyA, kalA, vidAyx, rAga, kAla, niyati - Aruvidha : jiVvAtamxna savxrUpavanunx kaMcukadaMte AvarisiruvudariMda `SaTf kaMcuka' eMdeniside.}}
+\newmeaning{\artha{ashudAdhx - (asapxSaTx) ?}}
+\smallskip
 \begin{shl}
 ``tatarxshudAdhxshakitxH catuviRdhA, shakitx-sadAshiva-Ishavxra-shudadhx videyxVti BeVdAtf |''
 \end{shl}
-\gl{}
-\info{shivA.pa.}{parxka.-1, ga.BA. 6}{5, 21-23, 70}{}
-\begin{shl}
-``shudAdhxshudadhx shakitxrapi SaDivxdhA - mAyA-kalA-vidAyx-rAga-kAla-niyatiBeVdAtf |''\\
-``seVyaM SaTftatAtxvXtimxkA jiVvAtamxnaH savxsavxrUpAvaraka kaMcuka pArxyatAvxtf SaTf kaMcukamitayxBidhiVyateV |''
-\end{shl}
-\pauthor{(shivA.pa., parxka.-1, ga.BA.-6, pu. 5)}
-\gl{}
-\info{shivA.pa.}{parxka.-2, ga.BA. 12-13}{21-23, 70}{}
-\mng{beVre beVre dAshaRnikaru shakitxyanunx ceVtana matutx aceVtanaveMdU, sUthxla matutx sUkaSxmXveMdU, nitayx matutx anitayxveMdU eraDu vidhavAgi parigaNisutAtxre. vAsatxvavAgi kAraNarUpavAda sUkaSxmXcidacidUrxpa shakitxge nitayxtavxvanUnx, kAyaRrUpadiMda sUthxlacidacidUrxpashakitxge anitayxtavxvanUnx shivAdevxYtadashaRnadalilx aMgiVkarisalAgide. I jagatutx shivashakitxgaLa samarasiVBUtareV AgiruvudariMda, elalx padAthaRgaLalilxyU oMdalalx oMdu shakitx ide. (AkAsha-vAyxpanashakitx, gALi-sapxMdanashakitx, aginx-javxlanashakitx),}\\
-\mng{niVru - ApAyxyanashakitx, BUmi - dhAraNashakitx itAyxdi.}\\
-\mng{saqSiTxgU munanx shivanobabxneV idadxnu. avaniMda parxjAcnxrUpavU, purAtanavU Ada shakitxyu horabaMditu.}\\
-\mng{modalu shivaniMda icACxshakitxyu horabaMdu, anaMtara jAcnxnashakitx matutx kirxyAshakitxgaLu horabaMdavu. A shakitxgaLiMda hadinAlukx loVkagaLU utapxnanxvAdavu eMbudu AgaloVkatxvicAra.}
+\smallskip
 \begin{shl}
 ``seVyaM shakitxH savxBAvataH ceVtanAceVtanasavxrUpA api,... |\\
 tatatxtapxdAthaR savxBAvAnusAreVNa tatatxcaCxkitxH\\
 parxtayxkASxdi parxmANeYranagamayxteV\char'263nuBUyateV ca ||''
 \end{shl}
+\smallskip
 \pauthor{(shivA.pa., parxka.-2, ga.BA.-17, pu. 21-22)}
+\smallskip
 \begin{shl}
 ``parxjAcnx ca tasAmxtf parxsaqtA purANiV ||''
 \end{shl}
+\smallskip
 \pauthor{(shevxVtAshavxtareV-4.18)}
+\smallskip
 \pauthor{(noV. shivA.pa., parxka. 7, ga.BA.-2, pu. 70)}
 \begin{shl}
 ``anAdi nidhanAcACxMtAtf shivAtf parama kAraNAtf |\\
 icACxshakitxviRniSAkxrXMtA tatoVjAcnxnaM tataH kirxyA ||\\
 tatorxVtapxnAnxni BUtAni BuvanAni catudaRsha ||'' (AgamoVkitx)
 \end{shl}
+\smallskip
 \pauthor{(shivA.pa. parxka.-2, ga.BA.-13, pu. 23)}
-
-\src{va}
-\mng{jagatitxnalAlxguva saNaNx saNaNx badalAvaNegaLige manuSayx,
-  pArxNi, sUyaR, caMdarx, muMtAdavugaLeV kAraNaveMdu nAvu
-  naMbutetxVve. Adare iDiV jagatitxna saqSiTx, sithxti matutx
-  parxlayagaLanunx gaNanege tegedukoMDare manuSayx, pArxNi, sUyaR,
-  caMdarx muMtAdavugaLeV kAraNaveMdu heVLuvudu hAsAyxsapxda\-vAgutatxde,
-EkeMdare, Aga I kAraNagaLe inUnx saqSiTxyAgiruvudilalx; manuSayx
-jagatitxna parxLaya mADalu sAdhayxvilalx. Aga nAvu iMtha jAgatika
-badalAvaNegaLige kAraNagaLAvuvu eMbudakekx utatxra koDalu I jagatitxna
-mUla vasutxvAvudeMbudanunx huDukutetxVve. idakekx sAMKayxru parxkaqti
-matutx puruSareV (AtamxgaLeV) jagatitxna saqSiTx, sithxti, layagaLige
-kAraNaveMdu heVLidare, paqthivx, apupx, teVja matutx vAyu eMba nAlukx
-BUtagaLe kAraNaveMdu cAvARkaru naMbutAtxre. I eraDu sidAdhxMtagaLu
-parxkaqti puruSarigiMta matutx catuBURtagaLigiMta hecicxna tatavxveVnU
-ilalxveMdu parxtipAdisuvudariMda, avu niriVshavxravAdi
-matagaLenisikoLuLxtatxve. vacanakAraru I sidAdhxMtagaLanunx
-KaMDisidAdxre.}\\
-\imng{parxpaMcada saqSiTx sithxti layagaLige parxkaqti itAyxdi mUlavasutxgaLu beVku eMba mAtanunx vacanakAraru opupxtAtxre. I
-  mUlavasutxvanunx avaru \hbox{shakitx} eMdu karedidAdxre. Adare avara
-  parxkAra shakitxyoMdeV I kelasagaLanunx mADalAradu. EkeMdare
-  shakitxyu jaDa (aceVtana) vasutxvAgidudx, adu taMtAne parxpaMcada
-  vividha vasutxgaLanunx racisalu sAdhayxvilalx. adu yAvAga
-  badalAvaNeyAgabeVku, yAva kAlakarxmadalilx badalAvaNeyAgabeVku
-  eMbudanunx nidhaRrisi, niyaMtirxsalu mAgaRdashaRna niVDalu,
-  jaDashakitxyalalxda, Adare jaDashakitxgiMta hecicxna, ceYtanayx
-  beVkAgutatxde. I ceYtanayxvanunx vacanakAraru halavAru
-  hesarugaLiMda karedidudx, avugaLalilx oMdAda `parashiva' eMbudanunx
-  nAviVga ArisikoLoLxVNa.}\\
-\imng{vacanakArara parashivanu adevxYtigaLa barxhamxnaMte
+\smallskip
+\newmeaning{\arthanonum{vacanakArara parashivanu adevxYtigaLa barxhamxnaMte
   niguRNanalalx. parashivanige aneVka guNagaLive. avelalxvanUnx
   `shakitx' eMba padadaDiyalilx tarabahudu. hAgAdare `shakitx'
-  eMdareVnu?}\\
-\imng{vacanagaLalilx `shakitx' eMba padakekx kaniSaThx eraDu viBinanx
+  eMdareVnu?}}
+\newmeaning{\arthanonum{vacanagaLalilx `shakitx' eMba padakekx kaniSaThx eraDu viBinanx
   athaRgaLive. udAharaNege `kuMbAranige maDake mADuva shakitxyide'
   matutx biVjakekx maravAguva shakitxyide eMba eraDu vAkayxgaLalilx
   shakitx eMba padavu heVge beVre beVre athaRgaLalilx baLasalu
@@ -240,44 +164,20 @@ KaMDisidAdxre.}\\
   maravAgutatxde. aMdare kuMbArana yAva shakitxyU
   maDakeyAguvudilalx. AdudariMda kuMbAra matutx biVja eraDakekx
   shakitx idadxrU kuMbAranigiruva shakitxyu (balavu) nimitatx
-  kAraNavenisidare, biVjashakitxyu upAdAnakAraNavenisikoLuLxtatxde.}\\
-\imng{vacanakAraru `shakitx'yeMba padavanunx I eraDu athaRgaLalilxyU
-  baLasi\-dAdxre. shakitxyeV parxpaMcavAgi mApaRDutatxde eMdAga shakitx
-  eMbudu oMdu vasutxveMdu, shivanige adanunx niyaMtirxsi nideVRshana
-  niVDabalalx shakitx ide eMdAga shakitx eMbudu shivana oMdu guNaveMdu
-athaRvAgutatxde. Iga shakitx eMbudakekx modalane athaRda
-otutxkoDoVNa.}\\
-\imng{Ishavxra kaqSaNxna sAMKayxdashaRnada parxkAra mUlaparxkaqtiyeV
+  kAraNavenisidare, biVjashakitxyu upAdAnakAraNavenisikoLuLxtatxde.}}
+\newmeaning{\arthanonum{Ishavxra kaqSaNxna sAMKayxdashaRnada parxkAra mUlaparxkaqtiyeV
   shakitxya Agara. biVjavu maravAgi heVge mApaRDutatxdeyoV hAgeyeV
   parxkaqti eMba shakitxyu budidhx, manasusx, ahaM, paMceVMdirxyagaLu
   itAyxdigAgi mApaRDutatxde. iveV tatavxgaLu himumxKavAgi calisi mUla
   parxkaqtiya sAmAyxvasethxyanunx talupidare Aga
-  parxlayavAgutatxde. Adare parxkaqtiyu parxlayadiMda saqSiTxyeMba
+  parxLayavAgutatxde. Adare parxkaqtiyu parxlayadiMda saqSiTxyeMba
   avasethxge vikAsavAguvAgalAgali, saqSiTxyiMda parxlayasithxtige
   hiMdiruguvAgalAgaliV athavA iveraDara madhayxda avasethxyalilx
   naDeyuva Bwtika, rAsAyanika, mAnasika matutx jeYvika badalAvaNegaLu
 AguvAgalAgali, adu hora\-gina, IshavxranaMtha, nimitatxkAraNagaLanunx
 avalaMbisuvudilalx. I elalx riVtiya badalAvaNegaLige agatayxvAda
-shakitxyu parxkaqtiyalelxV ide.}\\
-\imng{oMdu vasutxvina saqSiTxge athavA kirxye athavA calanege beVkAguva
-tatavxveV shakitx eMbudu idariMda vayxkatxvAgutatxde. Adare shakitxyu
-baNaNx, BAra, rucigaLaMtaha amUtaR guNavalalx. EkeMdare amUtaR
-guNadiMda EnanUnx saqSiTxsalu sAdhayxvilalx. udAharaNege maqduvAda
-vasutxviniMda EnanAnxdarU racisabahudu. Adare, maqdutavxdiMda EnanUnx
-racisalu baruvudilalx. aMdare, shakitx eMbudu oMdu darxvayxveV horatu
-oMdu guNavalalx. udAharaNege ``parashivaniMda cicaCxkitx,
-cicaCxkitxyiMda parA, Adi, jAcnxna, kirxyA eMba paMcakalAshakitxyarudayarAdaru noVDA A kirxyAshakitxyiMda nivaqtitxkale, A
-nivaqtitxkaleyiMda mahAmAye huTiTxtutx noVDA A mahAmAyAshakitxyiMda
-samasatx jagatitxna janana noVDA'' eMdu toVMTada sidadhxliMga
-shiva\-yoVgigaLu heVLuvAga (11.65) jagatitxna saqSiTxge beVkAguva
-mUlavasutx oMdu darxvayx athavA vasutxvAgirabeVkeV horatu,
-guNavAgirabAradu, eMbudu sapxSaTxvAgutatxde. kelavu vacanakArareVnoV
-shivashakitxyara saMbaMdhavanunx heVLuvAga, shivaneV darxvayxveMdu
-shakitxyeV guNaveMdU (udAharaNege shiva, hUvu, shakitx, gaMdha)
-heVLutAtxre. Adare aMtha upamegaLu shivashakitxyara saMbaMdhakekx
-anavxyisutatxve horatu, shivashakitxyara savxrUpakekx
-anavxyisuvudilalx.}\\
-\imng{matetx kelavu vacanakAraru shakitxyanunx parashivana
+shakitxyu parxkaqtiyalelxV ide.}}
+\newmeaning{\arthanonum{matetx kelavu vacanakAraru shakitxyanunx parashivana
   heMDatiyeMbaMte citirxsidAdxre. udAharaNege `satutx citAtxnaMda
   nitayx paripUNaRvapapx parashivana citApxrXNashakitxyiMda
   paramajAcnxnashakitx udayisidaLu noVDA' (11.44), `niHkala shivana
@@ -291,72 +191,31 @@ heVLuvudu viroVdhABAsavenisutatxde. umege saqSiTxsuva shakitx idadxre,
 shivaneVke beVku eMba matotxMdu samaseyx ELutatxde. AdudariMda
 shakitxyanunx sitxrXVvAcakadiMda saMboVdhisuvudu oMdu alaMkArika
 BASeyeV horatu, vasutxsithxtige anavxyisuva BASeyalalx. A BASe
-purANagaLige yoVgayxveV horatu, dashaRnakakxlalx.}\\
-\imng{shakitxyeV parxpaMcavAgi mApaRDutatxde eMdare A guNavu shivana
-  digadxshaRna matutx niyaMtarxNavilalxdeV sAdhayxvilalx. AdudariMda
-  shakitxyu upAdAnakAraNa. parashivanu nimitatxkAraNa, eraDU
-  vasutxgaLeV : shiva cidavxsutx, shakitx cidavxsutx matutx
-  jaDavasutxgaLeraDanunx saqSiTxsabalalx darxvayx. aMdare, shakitxyu
-  kalulx, maNuNx muMtAda jaDavasutxgaLanUnx
-  saqSiTxsabalulxdu. AtamxgaLaMtaha cidavxsutxgaLanUnx
-  saqSiTxsabalulxdu.}\\
-\imng{shakitxyu vacanakArara parxkAra eraDu riVtiyalilx kelasa
-  mADabalulxdu. shivana iceCxya parxkAra adu manuSayxra deVheVMdirxyakaraNAdigaLAgi rUpAMtaragoMDare adu mAyAshakitx, adhoVmAyA,
-  kalAshakitx eMba hesarugaLiMda kareyalapxDutatxde. aMdare
-  manuSayxnoMdigiruva I shakitxgaLu avananunx saMsArakekx
-  baMdhisutatxve. kelavu shakitxgaLu namamxlilx moVhavanUnx, matetx
-  kelavu shakitxgaLu korxVdhavanUnx utApxdisabalalxvu. moVha
-  korxVdhAdigaLu AdhAyx\-tamxka jiVvanada aDiDxgaLAgiruvudariMda avu
-  adhoVmAyeya (athavA kalAshakitxya)
-  rUpAMtaragaLenisikoLuLxtatxve. Adare aveV shakitxgaLu guruvina
-  perxVraNeyiMdAgi namamxlilx mumukuSxtavx, Bakitx, veYrAgayx, muMtAda
-AdhAyxtimxka guNagaLanunx uMTumADabalalxvu. Aga A shakitxgaLige
-Bakitxshakitx athavA nivaqtitx\-shakitx athavA UdhavxRmAyA
-enisikoLuLxtatxde. hiVge manuSayxneMdare kalAshakitx matutx
-BakitxshakitxgaLa naDuvina tikAkxTa. BakitxshakitxgaLu gedadxre,
-mumukuSxvAgutAtxne. kalAshakitxgaLu gedadxre matetx
-saMsAriyAgutAtxne.}\\
-\imng{kalAshakitx matutx BakitxshakitxgaLu mUladalilx shakitxyeV
+purANagaLige yoVgayxveV horatu, dashaRnakakxlalx.}}
+\newmeaning{\arthanonum{kalAshakitx matutx BakitxshakitxgaLu mUladalilx shakitxyeV
   Agidudx, A shakitxyu parashiva\-nalilx avayxkatxvAgi
   aDagirutatxve. saqSiTxyAdanaMtaravU avu shivanalilxyeV idudx,
   manuSayxnige iMdirxyagoVcaravU budidhxgoVcaravU Agutatxde. kelavu
   veVLe ideV parashivana tanuveMdU parashivaneV avana AtamxveMdU
   parigaNisalAgutatxde. aMtU shiva matutx shakitxgaLalilx avinABAva
-  saMbaMdhavide - Atamx matutx deVhagaLigiruva saMbaMdhadaMte.}\\
-\imng{kelavaru shakitx eMba padavanunx heNuNxmagu eMbathaRdalilx
+  saMbaMdhavide - Atamx matutx deVhagaLigiruva saMbaMdhadaMte.}}
+\newmeaning{\arthanonum{kelavaru shakitx eMba padavanunx heNuNxmagu eMbathaRdalilx
   baLasidAdxre (5:398). shakitx parashivana satiyeMba pwrANika BASeya
 parxkAra, idu samathaRniVya.}
-
-\src{kA}
-\gl{nA}
-\mng{jagatitxna kirxyegaLige sahAyakavAgi, mahAliMgadiMda utapxtitxyAda mUlaceYtanayx:}
-\expl{shakitx jagadudayakAraNamenikuM (shivaciM. 38-246); shakitx enalA mahAliMgadoLagunxyXSaNxdaMtaviraLamAda kirxyAshakitx jAcnxnashakitx icACxshakitx Adishakitx parAshakitx cicaCxkitxgaLeMbivu (shUnayxmaM. samava. 11-570-1249).}
-\end{entry}
-
-\begin{entry}
-\word{shakitx Bakitx}
-\src{kA}
-\gl{nAmapada}
-\info{vimapu}{7-26}{56}{1930.}
-\mng{liMgamadupAsayx kaMgamupAM tiLiye| liMgamiVshavxranumaMgaM
-  jiVvanuM sathxlaM, liMgAMgameMberaDu bageya nAMtaMtadivxtiVyamAdA
-  shakitxyu|| piMgaditetxramAyutx liMgAshirxtoVcaCxkitx|
-  tuMgakaleyenisitaMgavanu poMdida shakitx| kaMgoLipa
-  BakitxyenisihudAdaDuM shakitxBakitxgaLa Binanxvihavu |\,26\,|} 
+\ullekha{harashakitxgaLalilx huTiTxda benaka BeYrava SaNumxKara... (savasaM. 1; basava. 1398-387); yugada utAsxhava... paMcashakitxgaLige paMcaparxdhAnaru... (savasaM. 2; alalxma. 1481-439); Adi anAdi ilalxdaMdu... `shi eMbakaSxrave rudarx. `vA eMbakaSxrave shakitx... (savasaM. 3; cenanxba. 981-321); bahupariya puSapxdali... shakitxya hasiya masatxkadalilx... (savasaM. 4; sidadhxrA. 817-230); Adi anAdi nitAyxnitayxva... A shakitxgaLige SaDivxdha BakitxyanaLavaDisi... (savasaM. 5; akakxma. 58-21).}}
 \end{entry}
 
 \begin{entry}
 \word{shakitx matutx tatavx}
-\src{va}
-\mng{saqSiTxya vacanagaLalilx parAshakitxyAdiyAgi aidu shakitxgaLa
+\meaning{\arthanonum{saqSiTxya vacanagaLalilx parAshakitxyAdiyAgi aidu shakitxgaLa
   vicAravalalxdeV, paqthivx muMtAda aidu tatavxgaLa vicAravU
   barutatxde. kelavu veVLe paMcashakitxgaLa matotxMdu hesare
   paMcaBUtagaLeMba naMbikeyU mUDutatxde. aMtU paMcaBUtagaLu
-  paMcashakitxgaLa beVre hesarugaLu athavA beVre rUpagaLu.}\\
-\imng{paMcaBUtagaLu shakitxya vividha rUpagaLeMbudakekx paMciVkaraNada
+  paMcashakitxgaLa beVre hesarugaLu athavA beVre rUpagaLu.}}
+\newmeaning{\arthanonum{paMcaBUtagaLu shakitxya vividha rUpagaLeMbudakekx paMciVkaraNada
   vacanagaLu puSiTx niVDutatxve. avugaLa guNadhamaRgaLa vishelxVSaNeyu
-I mAtanunx samathiRsutatxde.}\\
-\imng{kAThiNayx dhamaRvanunx hoMdiruva paqthivx tatavxkekx rUpa, rasa,
+I mAtanunx samathiRsutatxde.}}
+\newmeaning{\arthanonum{kAThiNayx dhamaRvanunx hoMdiruva paqthivx tatavxkekx rUpa, rasa,
   gaMdha, shabadx matutx kAThiNayx eMba aidu guNagaLive. eraDu
   kaThiNa vasutxgaLa GaSaRNeyu shabadxvanunx utApxdisabalalxdu;
   avugaLalilx I guNagaLiruvudariMdaleV, kaThiNa vasutxgaLu iMdirxya
@@ -364,8 +223,8 @@ I mAtanunx samathiRsutatxde.}\\
   utApxdisa\-balalxvu. adeV riVti, jalatatavxkekx kAThiNayxvanunx biTuTx
 uLida nAlukx guNagaLU, aginxge shabadx, sapxshaR matutx rUpa (teVja)
 eMba mUru guNagaLU, vAyuvige shabadx matutx sapxshaRveMba eraDu
-guNagaLU, AkAshakekx shabadxveMba oMdeV guNavU ide.}\\
-\imng{paqthivxVtatavxkekx kAThiNayxvide eMdarU oMdeV, BAravanunx
+guNagaLU, AkAshakekx shabadxveMba oMdeV guNavU ide.}}
+\newmeaning{\arthanonum{paqthivxVtatavxkekx kAThiNayxvide eMdarU oMdeV, BAravanunx
   taDedukoLuLxva \hbox{shakitx} ide eMdarU oMdeV. kaThiNa vasutxgaLoLage
   matotxMdu vasutx parxveVshisalu sAdhayxvilalx. jalatatavxkekx
   baMdhaka guNavide. niVranunx seVrisi mudedx mADa\-bahudu; niVru hoVda
@@ -373,38 +232,43 @@ guNagaLU, AkAshakekx shabadxveMba oMdeV guNavU ide.}\\
   mADuva shakitxyide. idariMda vasutxvina modalina guNagaLu
   nAshavAgutatxve hAgU hosa guNagaLu barutatxve. vasutxgaLanunx oMdu
   kaDeyiMda matotxMdu kaDege oyuyxvudu vAyuvina guNa; hAgU
-  vasutxgaLige avakAsha mADikoDuvudeV AkAshada guNa.}\\
-\imng{parxpaMcada parxtiyoMdu vasutxvinalilx aidU BUtagaLu
+  vasutxgaLige avakAsha mADikoDuvudeV AkAshada guNa.}}
+\newmeaning{\arthanonum{parxpaMcada parxtiyoMdu vasutxvinalilx aidU BUtagaLu
   baLasalapxTiTxdadxrU, avugaLa parxmANada veYshiSaTxyXdiMdAgi
   vasutxgaLu vishiSaTx guNagaLanunx paDeyutatxve. kaThiNa
   vasutxgaLalilx paqthivx tatavxda aMsha bahaLa, uLida tatavxgaLa
   aMsha kaDime; darx vasutxgaLalilx jalatatavx parxdhAna; gALi, hoge,
   muMtAda vasutxgaLalilx vAyu tatavxparxdhAna; beMki, uSaNx
   muMtAdavugaLalilx aginxtatavx parxdhAna; KAli sathxLa (gALiyU
-  ilalxda sathxLagaLalilx) AkAsha tatavx parxdhAna. (noVDi : {\bf
-    shakitx, paMciVkaraNa}).} 
+  ilalxda sathxLagaLalilx) AkAsha tatavx parxdhAna.}
+\ullekha{shivatatavx aidu... shakitxtatatxvX, kale, kAla, niyati, sUkaSxmX iMtu tatatxvXMgaLu aidu... (savasaM. 4; sidadhxrA. 1005-282).}}
+\smallskip
+\newmeaning{\arthanonum{(noVDi. shakitx, paMciVkaraNa)}} 
 \end{entry}
 
 \begin{entry}
 \word{shakitx SaDaMgamaMtarx}
-\src{kA}
-\gl{nA}
-\mng{SaDilxMgagaLiganuguNavAgiruva biVjAkaSxra, kiVlaka, nAyxsAkaSxra, vadanAkaSxra, shakitxSaDaMga matutx liMgaSaDaMga maMtarxgaLeMba SaDivxdhamaMtarxgaLalilx oMdu:}
-\expl{shakitx SaDaMgamaMtarx -idaralilxyU Aru maMtarxgaLu seVpaRDeyAgutatxve. manuSayxnu SaTasxthXlakakxnuguNavAgi Acarisidalilx avanalilx shakitxgaLu uMTAgi kelavu pariNAmagaLu saMBavisutatxve ...OM hArxM nAM savaRjacnx savaRshakitx dhAmenxV namaH OM hirxVM mAM taqpitxshakitx dhAmenxV namaH OM hUrxM shiVM anAdishakitx dhAmenxV namaH OM herxYM vAM savxtaMtarxshakitx dhAmenxV namaH OM hwrxM yAM nitayxshakitx dhAmenxV namaH OM harxH OM alupAtxshakitx dhAmenxV namaH -I parxkAra idaralilx Aru maMtarxgaLive (shivAkoV. 158-258).}
+\meaning{\arthanonum{SaDilxMgagaLiganuguNavAgiruva biVjAkaSxra, kiVlaka, nAyxsAkaSxra, vadanAkaSxra, shakitxSaDaMga matutx liMgaSaDaMga maMtarxgaLeMba SaDivxdhamaMtarxgaLalilx oMdu.}
+\ullekha{shakitx SaDaMgamaMtarx -idaralilxyU Aru maMtarxgaLu seVpaRDeyAgutatxve. manuSayxnu SaTasxthXlakakxnuguNavAgi Acarisidalilx avanalilx shakitxgaLu uMTAgi kelavu pariNAmagaLu saMBavisutatxve ...OM hArxM nAM savaRjacnx savaRshakitx dhAmenxV namaH OM hirxVM mAM taqpitxshakitx dhAmenxV namaH OM hUrxM shiVM anAdishakitx dhAmenxV namaH OM herxYM vAM savxtaMtarxshakitx dhAmenxV namaH OM hwrxM yAM nitayxshakitx dhAmenxV namaH OM harxH OM alupAtxshakitx dhAmenxV namaH -I parxkAra idaralilx Aru maMtarxgaLive (shivAkoV. 158-258).}}
 \end{entry}
 
 \begin{entry}
 \word{shakitxcakarx (nAyxsa)}
 \src{saM}
-\mng{shakitxbiVjAkaSxragaLa nAyxsadiMda kUDiruva AdhAra, sAvxdhiSAThxna, maNipUraka, anAhata, vishudidhx, AjAcnx eMba SaTfcakarxgaLeV shakitxcakarx nAyxsa. rudarxbiVjagaLeMba akArAdi kaSxkArAMtavAda aivatotxMdu akaSxragaLu \hbox{shiva}-shakutxyXBayarUpagaLAdudariMda shivamaMtorxVdAdhxra kAladalilx shakitxbiVjagaLU Agutatxve. SaTfcakarxgaLalilx shivacakarxnAyxsavanunx mADidaMte shakitxcakarx nAyxsavanunx mADa\-beVku. AdhAracakarxdiMda vishudidhxcakarxdavaregina aidu cakarxgaLalilx shakArAdi shakitx\-biVjagaLanUnx nAyxsamADabeVku. AjAcnxcakarxdalilx eraDu daLagaLalilx LakAra kaSxkAragaLa sAthxnadalilx hakAra-LakAragaLanunx vinAyxsa mADabeVku.}
+\meaning{\arthanonum{shakitxbiVjAkaSxragaLa nAyxsadiMda kUDiruva AdhAra, sAvxdhiSAThxna, maNipUraka, anAhata, vishudidhx, AjAcnx eMba SaTfcakarxgaLeV shakitxcakarx nAyxsa. rudarxbiVjagaLeMba akArAdi kaSxkArAMtavAda aivatotxMdu akaSxragaLu \hbox{shiva}-shakutxyXBayarUpagaLAdudariMda shivamaMtorxVdAdhxra kAladalilx shakitxbiVjagaLU Agutatxve. SaTfcakarxgaLalilx shivacakarxnAyxsavanunx mADidaMte shakitxcakarx nAyxsavanunx mADa\-beVku. AdhAracakarxdiMda vishudidhxcakarxdavaregina aidu cakarxgaLalilx shakArAdi shakitx\-biVjagaLanUnx nAyxsamADabeVku. AjAcnxcakarxdalilx eraDu daLagaLalilx LakAra kaSxkAragaLa sAthxnadalilx hakAra-LakAragaLanunx vinAyxsa mADabeVku.}}
+\smallskip
 \begin{shl}
 EtAni shivacakArxNi shakitxcakArxNayxthoV nayxseVtf |\\
 AdhArAdigalAMtaM ca vaNARni pUvaRvananxyXseVtf ||\\
 AjAcnxyAM tu visheVSoV{\char'263}sitx shakitxpakeSxV haLeV nayxseVtf |
 \end{shl}
+\smallskip
 \pauthor{(vA. shu. A., 9. 22-23)}
-\SEE{SaTfcakarx, shivacakarx}
+\smallskip
+\newmeaning{\arthanonum{\SEE{SaTfcakarx, shivacakarx}}}
 \end{entry}
+
+%raghu, gv 3, 013.pdf = 5, 014.pdf = 2,
 
 \begin{entry}
 \word{shakitxcAlana}
